[package]
name = "otp-pass-import"
version = "0.1.0"
edition = "2024"
authors = ["Marco 'Ocramoi' Toledo"]
description = "A tool to import OTP secret files extracted using `extract-otp-secrets` into `pass`."

[dependencies]
anstyle = "1.0.11"
clap = { version = "4.5.41", features = ["derive"] }
clap-cargo = { version = "0.16.0", features = ["cargo_metadata"] }
csv = "1.3.1"
dotenv = { version = "0.15.0", features = ["clap", "cli"] }
libpass = "0.4.0"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
shellexpand = { version = "3.1.1", features = ["path", "os_str_bytes", "full", "bstr"] }
system-deps = "7.0.5"
termion = "4.0.5"
tokio = { version = "1", features = ["full"] }
url-escape = "0.1.1"

[package.metadata]
supported_platforms = [
    "linux",
    "macos"
]

[package.metadata.system-deps]
pass = "0.1.0"
pass-otp = "0.1.0"
